some routes and api-docs
