# routes/admin.js
@@ -3,6 +3,7 @@ const router = express.Router();
 
 const adminController = require('../controllers/admin');
 
+router.get('/getAdmin', adminController.getAlladmins);
 router.post('/newAdmin', adminController.newAdmin);
 router.delete('/deleteAdmin/:id', adminController.adminDelete);
 
