# routes/dishes.js
@@ -3,6 +3,7 @@ const router = express.Router();
 
 const dishController = require('../controllers/dishes');
 
+router.get('/getDishes', dishController.getAlldishes);
 router.post('/newDish', dishController.newDish);
 router.delete('/deleteDish/:id', dishController.deleteDish);
 
